temporary fix with scrolling issue on mobile. cant get window to scroll address bar off screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,6 @@ html,
 body {
   height: 100%;
   width: 100%;
-  /* background: lime; */
 }
 
 a {
@@ -17,8 +16,7 @@ a {
 }
 
 #__next {
-  /* height: 100%; */
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background: darkgrey;
   min-height: -webkit-fill-available;
